# MCP-Projects

./: .gitignore  README.md  main.py  pyproject.toml
ReAct-Agent-MCP/: gradio_app.py  mcp_client.py
ReAct-Agent-MCP/mcp_servers/: datetime_tools_server.py  math_server.py  string_tools_server.py  tech_news_server.py  weather_server.py  wikipedia_server.py  yfinance_server.py
flight-search-mcp/: config.py  flight_booking_server.py  log.py  mcp_flight_client.py  prompt_template.py  search_flights.py  serp_api.py
