[project]
name = "mcp-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "gradio>=5.23.3",
    "httpx>=0.28.1",
    "ipython>=9.0.2",
    "langchain>=0.3.23",
    "langchain-mcp-adapters>=0.0.7",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.3.25",
    "llama-index>=0.12.29",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-tools-mcp>=0.1.1",
    "mcp[cli]>=1.6.0",
    "yfinance>=0.2.55",
]
